use standard jre